PR#22 코드 리뷰 반영